--- a/vijay.html
+++ b/vijay.html
@@ -5,3 +5,10 @@
 <p>Joseph Vijay Chandrasekhar (born 22 June 1974),[2][3] known professionally as Vijay, is an Indian actor and singer who works mainly in Tamil cinema.[4][5] He is among the highest paid actors in India[6][7] and has featured in Forbes India's Celebrity
     100 list on seven occasions.[8][9] He has played the lead in 67 films. Referred to as Thalapathy (transl. Commander), Vijay has a significant following internationally.[10][6] He has won several awards, including an Osaka Best Actor Award and a South
     Indian International Movie Award.[11][12] In 2023, he became the highest paid actor in India and one of the top paid actors in the world.[13]</p>
+
+<p>
+    <h2>Movies :</h2>
+    Following the action-romance flick Thirumalai in 2003, Ghilli, a film directed by S. Dharani and produced by A. M. Rathnam, was released. It co-starred Trisha and Prakash Raj with Vijay as the lead.[38] Ghilli was the first Tamil film of all time to gross
+    over ₹500 million, or ₹50 crore, at the domestic box office.[39] The film grossed nearly $500,000 in the Malaysian market.[40] Ghilli also broke the record for the most people seeing a movie in the first week of its release, previously held by M.
+    G. Ramachandran's Adimai Penn (1969).[40] Ghilli received favourable reviews.[41] The Hindu stated that "Vijay, the hero whom the masses today identify with, and Prakash Raj, the inimitable villain in tow, this flick, "Ghilli"...on a winning track".[42]
+</p>
